--- a/www/index.html
+++ b/www/index.html
@@ -84,6 +84,31 @@
             <td id="name_5" align="center" width="200">no data</td>
             <td id="name_5" align="center" width="150">-</td>
           </tr>
+          <tr>
+            <td align="right" nowrap>６位</td>
+            <td id="name_1" align="center" width="200">no data</td>
+            <td id="score_1" align="center" width="150">-</td>
+          </tr>
+          <tr>
+            <td align="right" nowrap>７位</td>
+            <td id="name_2" align="center" width="200">no data</td>
+            <td id="name_2" align="center" width="150">-</td>
+          </tr>
+          <tr>
+            <td align="right" nowrap>８位</td>
+            <td id="name_3" align="center" width="200">no data</td>
+            <td id="name_3" align="center" width="150">-</td>
+          </tr>
+          <tr>
+            <td align="right" nowrap>９位</td>
+            <td id="name_4" align="center" width="200">no data</td>
+            <td id="name_4" align="center" width="150">-</td>
+          </tr>
+          <tr>
+            <td align="right" nowrap>１０位</td>
+            <td id="name_5" align="center" width="200">no data</td>
+            <td id="name_5" align="center" width="150">-</td>
+          </tr>
         </table>
       </center>
     </div>
